--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -6,6 +6,7 @@
   /*========== Colors ==========*/
   /* Change favorite color */
   --hue-color: 230;
+  /* --hue-color: #050517; */
   /*Purple 250 - Green 142 - Blue 230 - Pink 340*/
   /* HSL color mode */
   --first-color: hsl(var(--hue-color), 69%, 61%);
